# duelBot

./: .gitignore  BUILDING.md  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DEVELOPMENT.md  Doxyfile  DuelBot Class Hierarchy.html  README.md  TODO.md  bench.sh  colors.txt  duelBot  duelPro.code-workspace  file.txt  games.txt  notes.md  ran.txt  todo.sh  todo.txt  trash.cpp
.github/workflows/: docs.yml
config/: basegameconfig.json
exampleFiles/: exampleSecretCmake.txt
examples/: example-config.hpp
include/: baseGameInt.hpp  commandHandle.hpp  commandHandler.hpp  databaseLogic.hpp  databaselogic.hpp  dbtypes.hpp  drawGame.hpp  drawgame.hpp  eventHandler.hpp  eventhandle.hpp  frontend.hpp  frontendUtils.hpp  frontendcon.hpp  gameInteraction.hpp  gameLogic.hpp  gamenums.hpp  rateQueue.hpp  ratesys.hpp  utl.hpp
include/database/: databaselogic.hpp  dbtest.cpp  dbtypes.hpp
include/draw/: basedrawgame.cpp  basicdrawgame.cpp  drawgame.hpp
include/eventhandle/: eventhandle.cpp  eventhandle.hpp  eventutils.cpp  gamenums.hpp
include/front/: baseThread.cpp  basesimthread.cpp  basethread.cpp  frontend.hpp  frontendcon.hpp  threadHandle.cpp
include/games/: baseGameLogic.cpp  checkersLogic.cpp  chessLogic.cpp  gameLogic.cpp  gameLogic.hpp  ticTacToeLogic.cpp
include/interactions/: baseGameInt.hpp  gameInt.cpp
include/ratetools/: frontrq.cpp  ratefuncs.cpp  rateq.cpp  ratesys.hpp
include/utils/: bigselect.cpp  bigselect.hpp  colorstuff.hpp  point.cpp  utl.hpp
keeps/: frontend.hpp
src/: main.cpp
src/commands/: commandHandle.hpp
src/database/: databaseLogic.cpp  dbtest.cpp
src/draw/: basedrawgame.cpp  basicdrawgame.cpp  gameDraw.cpp  gameDrawUtils.cpp
src/eventhandle/: eventHandler.cpp  eventUtils.cpp  eventhandle.cpp
src/front/: basesimthread.cpp  basethread.cpp  simpleThread.cpp  threadHandle.cpp  threadHandler.cpp
src/games/: baseGameLogic.cpp  checkersLogic.cpp  chessLogic.cpp  connectLogic.cpp  gameLogic.cpp  ticTacToeLogic.cpp
src/interactions/: gameInt.cpp  gameInteractions.cpp
src/ratetools/: frontrq.cpp  rateQueueFront.cpp  rateQueueLogic.cpp  rateQueueUtils.cpp  ratefuncs.cpp  rateq.cpp
src/utils/: bigselect.cpp  point.cpp
